Fixing IE7 horizontal scrollbar

--- a/web/css/legacy/ie.css
+++ b/web/css/legacy/ie.css
@@ -9,3 +9,7 @@ body {
 legend {
   margin-bottom: 20px;
 }
+/* remove horizontal scroll bar problem in IE7 */
+#fb-root {
+  *display: none
+}
